maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:47: error: Missing closing brace `}' assumed here
}
^